# cirno-4

./: .dockerignore  .env.prod  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml
.github/workflows/: build.yml
cirno-4/plugins/archive/: __init__.py  entries_storage.py  models.py
cirno-4/plugins/bot_helps_render/: __init__.py
cirno-4/plugins/cool_ship_photo/: __init__.py  config.py
cirno-4/plugins/database_connector/: __init__.py  config.py
cirno-4/plugins/exchange_rate/: __init__.py  config.py  currency_list.json  exchangerate.py
cirno-4/plugins/mc_connector_bluemap_based/: __init__.py  config.py
cirno-4/plugins/ship_info_pic_search/: __init__.py  config.py  models.py
cirno-4/plugins/templates_render/: __init__.py  template_types.py  templates_render.py
cirno-4/plugins/templates_render/templates/: menus.html
plugins/mc_connector_bluemap_based/: config.py  models.py
