[project]
name = "cirno-4"
version = "0.1.0"
description = "cirno-4"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    "nonebot_plugin_gocqhttp",
]
plugin_dirs = [
    "plugins"
]
builtin_plugins = []

[tool.poetry]
name = "cirno-4"
version = "0.1.0"
description = ""
authors = ["Summerkirakira <summerkirakira@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cirno_4"}]

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
nonebot-adapter-onebot = "^2.2.3"
nonebot-plugin-gocqhttp = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
